Fix background width & nav items alignment

--- a/01-basics/main.css
+++ b/01-basics/main.css
@@ -5,7 +5,7 @@ body {
 
 #product-overview {
   background-color: #ff1b68;
-  width: 90%;
+  width: 100%;
   height: 528px;
   padding: 20px;
 }
@@ -37,7 +37,7 @@ h1 {
 .main-nav {
   display: inline-block;
   text-align: right;
-  width: calc(100% - 49px);
+  width: calc(100% - 54px);
 }
 
 .main-nav__items {
